<!--/**
 * Strings (strings.xml)
 *
 * Copyright 2021 Ryan Meneses. The SER423 Instructional Team and Arizona State University
 * have the right to build and evaluate this software package for the purposes of grading
 * and program assessment.
 *
 * @author Ryan Meneses     mailto: rmenese1@asu.edu
 * @version 1.0
 * @since November 16, 2021
 */-->
<resources>
    <!-- Main Activity View -->
    <string name="app_name">Place Description</string>

    <string name="name_label">Name</string>
    <string name="name_button">ASU-Poly</string>

    <string name="description_label">Description</string>
    <string name="description_text_view">Home of ASU\'s Software Engineering Programs</string>

    <string name="category_label">Category</string>
    <string name="category_text_view">School</string>

    <string name="address_title_label">Address Title</string>
    <string name="address_title_text_view">ASU Software Engineering</string>

    <string name="address_street_label">Address Street</string>
    <string name="address_street_text_view">7171 E Sonoran Arroyo Mall\nPeralta Hall 230\nMesa AZ 85212</string>

    <string name="elevation_label">Elevation</string>
    <string name="elevation_text_view">1384.0</string>

    <string name="latitude_label">Latitude</string>
    <string name="latitude_text_view">33.306388</string>

    <string name="longitude_label">Longitude</string>
    <string name="longitude_text_view">-111.679121</string>

    <string name="test_button">Test</string>

    <!-- Services Activity View -->
    <string name="add_button">Add Place</string>

    <string name="modify_button">Modify Place</string>

    <string name="remove_button">Remove Place</string>

    <string name="calc_button">Find Distance</string>

    <!--    Add/Modify Activity View-->
    <string name="clear_button">Clear</string>

    <string name="submit_button">Submit</string>

    <!--    Modify Activity View-->
    <string name="name_text_view">Name</string>

    <!--    Find Distance Activity-->
    <string name="distance_title">Great Circle Distance</string>

    <string name="great_circle_distance_label">Great Circle Distance</string>

    <string name="great_circle_distance">Distance</string>

    <string name="initial_bearing_label">Initial Bearing</string>

    <string name="initial_bearing">Bearing</string>

    <!--    AsyncTask-->
    <string name="url">http://10.0.2.2:8080/</string>
</resources>