<?xml version="1.0" encoding="utf-8"?>
<!-- Activity Services (activity_main.xml) -->
<!-- This is the services activity view. -->

<!-- author: Ryan Meneses -->
<!-- version: 1.0 -->
<!-- since: November 19, 2021 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!--    Add Button -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:text="@string/add_button"/>

    <!--    Add Button -->
    <Button
        android:id="@+id/modifyButton"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:text="@string/modify_button"/>

    <!--    Add Button -->
    <Button
        android:id="@+id/removeButton"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:text="@string/remove_button"/>

    <!--    Add Button -->
    <Button
        android:id="@+id/calcButton"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:text="@string/calc_button"/>
</LinearLayout>