<?xml version="1.0" encoding="utf-8"?>
<!-- Activity Add (activity_add.xml) -->
<!-- This is the add place activity view. -->

<!-- author: Ryan Meneses -->
<!-- version: 1.0 -->
<!-- since: November 21, 2021 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/placesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--    Linear Layout Center -->
    <LinearLayout
        android:id="@+id/centerLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal"/>

    <!--    Linear Layout Left for Labels -->
    <LinearLayout
        android:id="@+id/leftLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/centerLinearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!--    Name Label -->
        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/name_label"/>

        <!--    Description Label -->
        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/description_label"/>

        <!--    Category Label -->
        <TextView
            android:id="@+id/categoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/category_label"/>

        <!--    Address Title Label -->
        <TextView
            android:id="@+id/addressTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/address_title_label"/>

        <!--    Address Street Label -->
        <TextView
            android:id="@+id/addressStreetLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/address_street_label"/>

        <!--    Elevation Label -->
        <TextView
            android:id="@+id/elevationLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/elevation_label"/>

        <!--    Latitude Label -->
        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/latitude_label"/>

        <!--    Longitude Label -->
        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/longitude_label"/>

        <!--        Grid Layout for Button-->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--    Clear Button -->
            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/clear_button"/>
        </GridLayout>
    </LinearLayout>

    <!--    Linear Layout Right for Views -->
    <LinearLayout
        android:id="@+id/rightLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignStart="@+id/centerLinearLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!--    Name Edit Text -->
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:scrollbars="vertical"/>

        <!--    Description Edit Text -->
        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="description"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:scrollbars="vertical"/>

        <!--    Category Edit Text -->
        <EditText
            android:id="@+id/categoryEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="category"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:scrollbars="vertical"/>

        <!--    Address Title Edit Text -->
        <EditText
            android:id="@+id/addressTitleEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="address_title"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:scrollbars="vertical"/>

        <!--    Address Street Edit Text -->
        <EditText
            android:id="@+id/addressStreetEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="address_street"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:scrollbars="vertical"/>

        <!--    Elevation Edit Text -->
        <EditText
            android:id="@+id/elevationEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="elevation"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="LabelFor"
            android:scrollbars="vertical"/>

        <!--    Latitude Edit Text -->
        <EditText
            android:id="@+id/latitudeEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="latitude"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="LabelFor"
            android:scrollbars="vertical"/>

        <!--    Longitude Edit Text -->
        <EditText
            android:id="@+id/longitudeEditText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="longitude"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="LabelFor"
            android:scrollbars="vertical"/>

        <!--        Grid Layout for Button-->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--    Submit Button -->
            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/submit_button"/>
        </GridLayout>
    </LinearLayout>
</RelativeLayout>